fix: update layout and spacing in AboutMe and Portfolio sections for improved responsiveness

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -27,10 +27,10 @@
     @apply max-w-5xl md:mx-auto;
   }
   .cta {
-    @apply bg-layer w-full p-6 py-8 flex flex-col lg:flex-row lg:justify-between lg:items-center lg:mt-10 lg:mb-24 lg:rounded-xl lg:border lg:border-white/20 lg:py-6;
+    @apply bg-layer w-full p-6 py-8 flex flex-col lg:flex-row lg:justify-between lg:items-center lg:mt-10 lg:mb-50 lg:rounded-xl lg:border lg:border-white/20 lg:py-6;
   }
 
   .cta-bg-customized {
-    @apply w-full p-6 py-8 flex flex-col lg:flex-row lg:justify-between lg:items-center lg:mt-10 lg:mb-24 lg:rounded-xl lg:py-6;
+    @apply w-full p-6 py-8 flex flex-col lg:flex-row lg:justify-between lg:items-center lg:mt-10 lg:mb-50 lg:rounded-xl lg:py-6;
   }
 }
